<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.goodev.droidddle.ShotActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_like"
        android:checkable="true"
        android:icon="@drawable/ic_actionbar_like"
        android:orderInCategory="101"
        android:title="@string/action_like"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_to_bucket"
        android:icon="@drawable/ic_shot_buckets"
        android:orderInCategory="102"
        android:title="@string/action_add_to_bucket"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:orderInCategory="103"
        android:title="@string/action_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_attachment"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="104"
        android:title="@string/action_add_attachment"
        android:visible="false"
        app:showAsAction="never" />
</menu>
