<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.goodev.droidddle.AboutActivity">

        <TextView
            android:id="@+id/launch_icon_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:autoLink="all"
            android:padding="@dimen/keyline_1"
            android:text="@string/luancher_icon_thanks"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/translate_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/launch_icon_view"
            android:background="?selectableItemBackground"
            android:padding="@dimen/keyline_1"
            android:text="@string/translate_credit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:visibility="visible" />

        <TextView
            android:id="@+id/changelog_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/translate_view"
            android:background="?selectableItemBackground"
            android:padding="@dimen/keyline_1"
            android:text="@string/change_log_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/changelog_view"
            android:layout_centerHorizontal="false"
            android:padding="@dimen/keyline_1"
            android:text="@string/donation"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/version_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/icon"
            android:padding="@dimen/keyline_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <FrameLayout
            android:id="@+id/ads_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_view"></FrameLayout>


    </RelativeLayout>
</merge>
